# CSGames2015-Parallelism

./: AUTHORS.txt  CMakeLists.txt  LICENSE  README.md  compile_client.sh  server  server.cpp  start_comp.py  start_comp.sh  start_server.sh
old/: server.cpp
src/: CMakeLists.txt  base64.h  client.cpp  server.cpp  strings.h
